--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,9 @@ name: CI
 on:
   workflow_dispatch:
   pull_request:
-    branches: [main, dev]
+    branches: [main, develop, feature]
   push:
-    branches: [main, dev]
+    branches: [main, develop, feature]
 
 jobs:
   mypy:
