--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -67,6 +67,10 @@ mypy = "^1.7.1"
 types-requests = "^2.31.0.2"
 types-aiofiles = "^23.1.0.5"
 
+
+[tool.poetry.group.dev.dependencies]
+types-aiofiles = "^23.2.0.20240106"
+
 [tool.mypy]
 python_version = "3.8"
 
@@ -89,7 +93,8 @@ module = [
     "syncer",
     "vertexai.language_models",
     "vertexai.preview.generative_models",
-    "google.cloud"
+    "google.cloud",
+    "llama_index.*"
 ]
 ignore_missing_imports = true
 
