--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,13 +6,13 @@ on:
     types: [published]
 
 jobs:
-  tests:
-    uses: ./.github/workflows/tests.yaml
-    secrets: inherit
+#  tests:
+#    uses: ./.github/workflows/tests.yaml
+#    secrets: inherit
 
   build:
     runs-on: ubuntu-latest
-    needs: [tests]
+#    needs: [tests]
 
     steps:
       - uses: actions/checkout@v3
@@ -48,7 +48,6 @@ jobs:
       - name: Build chainlit
         run: |
           pnpm run build
-          poetry build --format wheel
         working-directory: ./backend
 
       - name: Create Release
